--- a/package.json
+++ b/package.json
@@ -9,14 +9,40 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "expo": "~53.0.9",
+    "expo-constants": "~16.0.2",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.9",
+    "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.2.3",
+    "firebase": "^10.7.1",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-dom": "^19.0.0",
+    "react-native": "0.79.2",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.19.0",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-picker-select": "^9.1.3",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "~4.2.0",
+    "react-native-svg": "15.11.2",
+    "react-native-vector-icons": "^10.0.2",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "~5.8.3"
   },
   "private": true
