--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-router": "~5.0.7",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.8",
     "firebase": "^10.7.1",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
@@ -35,9 +36,9 @@
     "react-native-picker-select": "^9.1.3",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
+    "react-native-svg": "^15.11.2",
     "react-native-web": "^0.20.0",
-    "expo-system-ui": "~5.0.8"
+    "victory-native": "^41.17.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
