--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.0.4",
+    "@mui/icons-material": "^7.1.2",
+    "@mui/material": "^7.1.2",
+    "@mui/x-charts": "^8.5.3",
+    "@mui/x-date-pickers": "^8.5.3",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.3.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.3.20",
+    "dayjs": "^1.11.13",
     "expo": "~53.0.9",
     "expo-constants": "~17.1.6",
     "expo-linking": "~7.1.5",
@@ -24,6 +31,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.8",
     "firebase": "^10.7.1",
+    "framer-motion": "^12.18.1",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
     "react": "19.0.0",
@@ -38,6 +46,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.11.2",
     "react-native-web": "^0.20.0",
+    "recharts": "^2.15.4",
     "victory-native": "^41.17.4"
   },
   "devDependencies": {
