--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dayjs": "^1.11.13",
     "expo": "~53.0.9",
     "expo-constants": "~17.1.6",
+    "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.0.7",
     "expo-splash-screen": "~0.30.8",
