--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#1e293b"
     },
@@ -26,8 +26,23 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.gkhkaya.paramiyonet"
+      "package": "com.gkhkaya.paramiyonet",
+      "notifications": {
+        "icon": "./assets/icon.png",
+        "color": "#1e293b"
+      }
     },
+    "plugins": [
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/icon.png",
+          "color": "#1e293b",
+          "defaultChannel": "default",
+          "sounds": ["default"]
+        }
+      ]
+    ],
     "web": {
       "favicon": "./assets/favicon.png"
     },
