--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-font": "^13.3.1",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.5",
+    "expo-notifications": "~0.30.4",
     "expo-router": "~5.0.7",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
