--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "build": "expo export -p web"
   },
@@ -29,7 +29,6 @@
     "expo-font": "^13.3.1",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.5",
-    "expo-notifications": "~0.30.4",
     "expo-router": "~5.0.7",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
