--- a/app.json
+++ b/app.json
@@ -31,7 +31,8 @@
     "plugins": [
     ],
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "publicPath": "/paramiyonet/"
     },
     "extra": {
       "eas": {
